Memory optimizations for making nodes/relationships/properties take less space in the heap.
o Uses a PropertyData[] w/o slack in Primitive to store properties.
o More efficient PropertyData implementations memory wise. Could be reduced even further.
o Uses RelIdArray[] w/o slack in NodeImpl to store relationships per type.
o Made IdBlock take less memory, but is upgraded on demand. Id array has no slack.